--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.1.5
   dio: ^5.7.0
   shared_preferences: ^2.3.5
+  go_router: ^14.6.3
+  flutter_screenutil: ^5.9.3
 
 
 dev_dependencies:
