--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   shared_preferences: ^2.3.5
   go_router: ^14.6.3
   flutter_screenutil: ^5.9.3
+  bloc: ^9.0.0
+  flutter_bloc: ^9.0.0
+  equatable: ^2.0.7
+  get_it: ^8.0.3
+  fluttertoast: ^8.2.12
+
 
 
 dev_dependencies:
