--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.3.5
   go_router: ^14.6.3
   flutter_screenutil: ^5.9.3
+  readmore: ^3.0.0
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
