--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   fluttertoast: ^8.2.12
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  flutter_svg: ^2.0.17
 
 
 
@@ -55,6 +58,9 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  freezed: ^2.5.8
+  json_serializable: ^6.9.3
 
 flutter:
   uses-material-design: true
