--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_svg: ^2.0.17
+  flutter_quill: ^11.4.1
+  flutter_quill_extensions: ^11.0.0
 
 
 
