--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_quill: ^11.4.1
   flutter_quill_extensions: ^11.0.0
   intl: ^0.19.0
+  cached_network_image: ^3.4.1
 
 
 
