--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_svg: ^2.0.17
+  url_launcher: ^6.3.1
   flutter_quill: ^11.4.1
   flutter_quill_extensions: ^11.0.0
   intl: ^0.20.2
