apis is in progress

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   fluttertoast: ^8.2.12
+  html_unescape: ^2.0.0
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_svg: ^2.0.17
